# track_aircraft_live

./: .gitignore  Home.py  README.md  avion.py  eda.ipynb  main.py  pyproject.toml  test_opensky.py  utils.py
.ipynb_checkpoints/: eda-checkpoint.ipynb
data/: data.py  df_states.parquet  states.pkl
pages/: Analyse de code.py  Partie 1.py  Partie 2.py
